--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "html-to-image": "^1.11.13",
     "jspdf": "^2.5.1",
     "react-dropzone": "^14.2.3",
-    "zustand/middleware": "latest"
+    "zustand": "latest"
   },
   "devDependencies": {
     "@types/node": "^20.11.18",
