--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-dropzone": "^14.2.3",
     "zod": "^3.23.8",
     "react-hook-form": "^7.53.0",
-    "@hookform/resolvers": "^3.6.0"
+    "@hookform/resolvers": "^3.6.0",
+    "date-fns/locale": "latest",
+    "zustand/middleware": "latest"
   },
   "devDependencies": {
     "@types/node": "^20.11.18",
